# BreachCraft

./: .gitignore  README.md
Scripts/: auth_analysis.py  log_analysis.py  parse_scan.py  pyproject.toml  recon.py  scanner.py
Scripts/sample_output/: report.md  results.json
Scripts/tests/: test_auth_analysis.py  test_log_analysis.py  test_parse_scan.py  test_recon.py  test_scanner.py
Writeups/: 01_appointment_sql_injection.md  02_dancing_smb.md  03_fawn_ftp.md  04_mysql.md  05_redeemer_redis.md  06_wing_data.md
